# 2d-csp-code

./: README.md  run_all.bat
20260107/: environment.yml
20260107/instances/: generate_dummy_instances.py
20260107_alns_patch_gap_geo_pathrules/: pyproject.toml
20260107_alns_patch_gap_geo_pathrules/data/: README.md  sample_parts.csv
20260107_alns_patch_gap_geo_pathrules/docs/: MODULE_MAPPING.md
20260107_alns_patch_gap_geo_pathrules/experiments/: aggregate_i1_i5_table2.py  run_demo.py
20260107_alns_patch_gap_geo_pathrules/src/inrp/: cfg.py  metrics.py  packer.py  routing.py  runner.py  stats_test.py  validate.py
20260107_alns_patch_gap_geo_pathrules/src/inrp_cie.egg-info/: SOURCES.txt
20260302/: README.md
20260302/experiments/: aggregate_i1_i5_table2.py  run_industrial_i1_i5.py
20260302/tests/: test_route_rules.py  test_shared_overlay.py  test_smoke.py
2d-csp-code-main2/optimized_code_CIE_ready/: environment.yml  run_all.bat
2d-csp-code-main2_CIE_patch/optimized_code_CIE_ready/: requirements.txt  (+1 more)
experiments/: run_industrial_i1_i5.py
inrp_cie_industrial_ready_final_v2/: run_industrial_i1_i5.py
optimized_code_S1_BC_trail_Lcut_CIE_ready_v8/optimized_code_CIE_ready/: README.md  environment.yml  pyproject.toml
optimized_code_S1_BC_trail_Lcut_CIE_ready_v8/optimized_code_CIE_ready/docs/: REPRODUCIBILITY.md
optimized_code_S1_BC_trail_Lcut_CIE_ready_v8/optimized_code_CIE_ready/src/inrp/: packer.py  routing.py  runner.py  viz.py
optimized_code_S1_BC_trail_Lcut_CIE_ready_v8/optimized_code_CIE_ready/src/inrp_cie_anon.egg-info/: requires.txt
(+102 files in other folders)
