[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inrp-cie"
version = "0.1.1"
description = "Research code for integrated nesting and routing (panel furniture) + industrial experiment pipeline"
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.21,<2",
  "scipy>=1.7,<2",
  "matplotlib>=3.4,<4",
  "numba>=0.56,<0.61",
  "pandas>=1.5,<3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
