[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inrp-cie-anon"
version = "0.1.0"
description = "Anonymous research code for integrated nesting and routing (panel furniture)"
requires-python = ">=3.10"
dependencies = [
  "numpy==1.26.4",
  "scipy==1.11.4",
  "matplotlib==3.8.2",
  "numba==0.59.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
